<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2016 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>

    <string name="app_name">Animator Duration Quick Setting</string>
    <string name="label_animator_duration_scale">Animator duration scale</string>
    <string name="label_toggle_animator_duration_scale">Toggle animator duration scale</string>
    <string name="dialog_title">Animator duration scale</string>
    <string name="permission_required_toast">Need to grant permission. Please run:\n\n
        adb shell pm grant uk.co.nickbutcher.animatordurationtile
        android.permission.WRITE_SECURE_SETTINGS</string>
    <string name="animation_off">Animation off</string>
    <string name="animation_scale_0_5x">Animation scale .5x</string>
    <string name="animation_scale_1x">Animation scale 1x</string>
    <string name="animation_scale_1_5x">Animation scale 1.5x</string>
    <string name="animation_scale_2x">Animation scale 2x</string>
    <string name="animation_scale_5x">Animation scale 5x</string>
    <string name="animation_scale_10x">Animation scale 10x</string>

</resources>
